updating screenshot, rebuilding extension

--- a/tempEdit.roboFontExt/html/index.html
+++ b/tempEdit.roboFontExt/html/index.html
@@ -9,7 +9,7 @@
         </head>
         <body>
         <h1>TempEdit</h1>
-<p>TempEdit is a RoboFont extension to import glyphs from multiple designspace sources into temporary font(s) for editing, and save them back into their source UFOs after the edits are done.</p>
+<p>A RoboFont extension to import glyphs from multiple designspace sources into temporary font(s) for editing, and export them back into their source UFOs when finished.</p>
 <p><img alt="" src="imgs/TempEdit.png" /></p>
 <h2 id="context">Context</h2>
 <p>Working with large designspaces with many masters can be challenging: loading many large fonts makes the application slow, and it gets harder to jump between glyphs from different masters.</p>
@@ -37,10 +37,10 @@
 </li>
 </ol>
 <p>fonts → fonts
-   : import each source into a separate font: </p>
+   : import each source into a separate font</p>
 <p><img alt="" src="imgs/tempedit-fonts-fonts.png" /></p>
 <p>fonts → layers
-   : import sources as layers of a single font:</p>
+   : import sources as layers of a single font</p>
 <p><img alt="" src="imgs/tempedit-fonts-layers.png" /></p>
 <ol>
 <li>
